# cloud_annotation_tool

./: .travis.yml  CMakeLists.txt  CMakeLists_Xenial.txt  LICENSE  README.md  main.cpp  resources.qrc  viewer.cpp  viewer.h  viewer.ui
.github/: FUNDING.yml
